--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@mui/x-charts": "^7.3.2",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
